--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css?family=Overpass");
+
+* {
+  box-sizing: border-box;
+  font-family: "Overpass", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Overpass", sans-serif;
+}
+
+.tags-input {
+  display: flex;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  min-height: 48px;
+  width: 480px;
+  padding: 0 8px;
+  border: 1px solid rgb(214, 216, 218);
+  border-radius: 6px;
+}
+input {
+  width: 100%;
+  height: 30%;
+  border: none;
+  outline: none;
+}
+ul {
+  list-style: none;
+  padding-left: 0%;
+}
+
+li {
+  float: left;
+  list-style: none;
+  width: vw;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  border: 2px solid;
+  align-items: center;
+  background-color: #ebf6ff;
+  border-color: #ebf6ff;
+}
+
+p {
+  margin-bottom: 2px;
+}
+span {
+  align-items: center;
+  margin-left: 5px;
+}
+
+button {
+  align-items: center;
+  text-align: center;
+  appearance: none;
+  background-color: #ebf6ff;
+  border: none;
+
+  color: black;
+  cursor: pointer;
+  display: inline-flex;
+  font-size: 12px;
+  height: 15px;
+  justify-content: center;
+  line-height: 0;
+  margin-left: 8px;
+
+  width: 25px;
 }
